# trabalho-2-Gabriel-Kaio-MariaClara-Wallyson

./: .gitignore  README.md  docusaurus.config.ts  sidebars.ts
codigo/: CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
codigo/components/cjson/: CMakeLists.txt
codigo/components/dht11/: CMakeLists.txt
codigo/components/hcsr04/: CMakeLists.txt  hcsr04.c
codigo/components/mqtt/: CMakeLists.txt  mqtt_client.c
codigo/components/ssd1306/: ssd1306.c
codigo/src/: CMakeLists.txt  Kconfig.projbuild  buzzer_task.c  buzzer_task.h  common.h  config.h  display_task.c  irrigation_task.c  irrigation_task.h  main.c  mqtt_manager.c  mqtt_manager.h  nvs_storage.h  sensors_task.c  sensors_task.h  telegram_task.c  telegram_task.h  webserver_task.c  webserver_task.h  wifi_manager.c
código/: .gitignore  README.md  platformio.ini  sdkconfig.defaults
código/components/bme280/: CMakeLists.txt  bme280_driver.c
código/components/dht11/: CMakeLists.txt  dht11.c
código/components/hcsr04/: CMakeLists.txt
código/components/ssd1306/: ssd1306.c
código/src/: CMakeLists.txt  button_task.c  button_task.h  config.h  display_task.c  display_task.h  main.c  nvs_storage.c  ultrasonic_task.c  ultrasonic_task.h  wifi_manager.c  wifi_manager.h
código/test/test_irrigation/: test_irrigation_logic.c
código/test/test_nvs/: test_nvs_storage.c
docs/: analiseriscos.md  comparativo.md  descricao-produto.md  eap.md  funcionamento.md  index.md  normas.md  pesquisa-bibliografica.md  prototipo-site.md  reproducao-esp32.md
src/css/: custom.css
(+5 files in other folders)
